--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv-webpack": "^7.0.3",
     "file-saver": "^2.0.5",
-    "formik": "^2.2.9",
     "markdown-it": "^12.3.2",
     "node-fetch": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "npx kill-port 3001 && PORT=3001 react-scripts start",
