--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "markdown-note",
+  "homepage": " https://retr0327.github.io/markdown-note-taking/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv-webpack": "^7.0.3",
     "file-saver": "^2.0.5",
+    "gh-pages": "^3.2.3",
     "markdown-it": "^12.3.2",
     "node-fetch": "^3.2.0",
     "react": "^17.0.2",
@@ -19,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "npx kill-port 3001 && PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
