--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "node-fetch": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -45,7 +46,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3",
-    "react-scripts": "^5.0.0"
+    "gh-pages": "^3.2.3"
   }
 }
