--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject", 
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
